# Portfolio

./: README.md  data.js  generate_project_data.py  index.html  portfolio_data.js  resume.html
C++/2DArcadeGame/: CMakeLists.txt  README.md  demo.html
C++/2DArcadeGame/config/: tuning.json
C++/2DArcadeGame/src/: main.cpp
C++/2DArcadeGame/src/audio/: AudioManager.cpp  AudioManager.h
C++/2DArcadeGame/src/core/: Camera.cpp  Camera.h  Config.h  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h
C++/2DArcadeGame/src/effects/: ParticleSystem.cpp  ParticleSystem.h
C++/2DArcadeGame/src/entities/: Boss.cpp  Boss.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Projectile.cpp  Projectile.h
C++/2DArcadeGame/src/save/: SaveManager.cpp  SaveManager.h
C++/2DArcadeGame/src/states/: GameOverState.cpp  GameOverState.h  GameState.h  HighScoreState.cpp  HighScoreState.h  PlayingState.cpp  PlayingState.h  SettingsState.cpp  SettingsState.h  TitleState.cpp  TitleState.h
C++/2DArcadeGame/src/systems/: CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  SpawnSystem.cpp  SpawnSystem.h
C++/2DArcadeGame/src/ui/: HUD.cpp  HUD.h
C++/2DArcadeGame/src/utils/: Math.h
C++/3dGraphicEngine/: .clang-format  CMakeLists.txt  CMakePresets.json  build_error.txt  build_error_2.txt  build_error_3.txt  build_output_cxx20.txt  build_output_final.txt  build_output_quat_disabled.txt  cmake_output.txt  configure_output_2.txt  demo.html  vcpkg.json
C++/3dGraphicEngine/engine/core/: CMakeLists.txt  assert.h  log.cpp  log.h  types.h
C++/3dGraphicEngine/engine/platform/: CMakeLists.txt  input.cpp  input.h  timer.cpp  timer.h  window.cpp  window.h
C++/3dGraphicEngine/engine/render/: CMakeLists.txt  swapchain.cpp  swapchain.h  vulkan_context.cpp  vulkan_context.h
C++/3dGraphicEngine/shaders/: .gitkeep
C++/3dGraphicEngine/src/: main.cpp
C++/ChessEngine/: demo.html  main.cpp
C++/CurrencyConverter/: demo.html  main.cpp
C++/DataAnalysisTools/: demo.html  main.cpp
C++/FileEncryption/: demo.html  main.cpp
C++/GameServerClient/: demo.html  main.cpp
C++/MachineLearningModel/: demo.html  main.cpp
C++/MadLibsGenerator/: demo.html  main.cpp
C++/NumberGuessingGame/: demo.html  main.cpp
C++/RayTracer/: demo.html  main.cpp
C++/RockPaperScissors/: demo.html  main.cpp
C++/SimpleMusicPlayer/: demo.html  main.cpp
C++/SudokuSolver/: demo.html  main.cpp
C++/TextBasedAdventureGame/: demo.html  main.cpp
ML/MachineLearningModel/: main.py
MinecraftScripts/: areaClear.py  autoclickerSword.py
NormalPages/: syllabus_website.html
Python/BlockchainApplication/: demo.html  gui_main.py  main.py
Python/Calculator/: demo.html  gui_main.py  main.py
Python/Chatbot/: demo.html  gui_main.py  main.py
Python/ChatbotWhatsapp/: main.py
Python/Clock/: clock.py  demo.html
Python/CurrencyConverter/: demo.html  gui_main.py  main.py
Python/DataStreamingPipeline/: main.py
Python/DataVisulisationTool/: demo.html  gui_main.py  main.py
Python/ImazeResizer/: ImageResizer.py  demo.html
Python/MachineLearningModel/: demo.html  gui_main.py  main.py
Python/MadLibsGenerator/: demo.html  gui_main.py  main.py
Python/NumberGuessingGame/: demo.html  gui_main.py  main.py
Python/ObjectDetectionApp/: demo.html  gui_main.py  main.py
Python/Pass/: demo.html  main.py
Python/QR_Codes/: demo.html  gui_main.py  main.py
Python/Qr/: qrGen.py
Python/Renamer/: build_renamer.py  build_renamer_config.json
Python/RestfulAPI/: main.py
Python/SSC/: demo.html  gui_main.py  mathematical_data.csv  sscperp.py
Python/SimpleWebApplication/: app.py
Python/TextBasedAdventure/: demo.html  gui_main.py  main.py
Python/Tic-Tac-Toe/: demo.html  gui_main.py  main.py
Python/WeatherApplication/: Weatherapp.py  demo.html  instructions.txt
Python/WebScrraper/: demo.html  gui_main.py  main.py
Python/githbProfile/: demo.html  github_avatar_downloader.py  gui_main.py
Python/payment/: Payments.py  data.xlsx
SpeedMaths/: README.md  build_exe.py  config.json  install_requirements.py  main.py  math_practice.db  requirements.txt  test_suite.py
TestPages/: index.html
Web/DynamicWebsitewithBLog/: index.html  script.js  style.css
Web/E-commercePlatform/: index.html  script.js  style.css
Web/InteractiveDataVisualisation/: index.html  script.js  style.css
Web/InteractiveProductPage/: index.html  script.js  style.css
Web/InteractiveTODO/: index.html  script.js  style.css
Web/MachineLearningPoweredWebApp/: index.html  script.js  style.css
Web/MultiplayerGame/: index.html
Web/PaymentDataAnalysis/: analyze.py  index.html  script.js  styles.css
Web/ProgressiveWebApp/: index.html  manifest.json  script.js  style.css  sw.js
Web/QuizApplication/: index.html  script.js  style.css
Web/SocialNetworkingPlatform/: index.html  script.js  style.css
Web/WeatherAPp/: index.html  script.js  style.css
WebPage/new/: index.html
commercialisationPlan/: 30_day_action_plan.md  commercial_website_plan.md  executive_summary.md  high_demand_projects.md  homepage_structure.md  projects_ranked_by_viability.md  quick_implementation_checklist.md
css/: styles.css
docs/: Cpp_Projects.md  Python_Projects.md  Web_Projects.md
documentation/: features.md  project_structure.md
documentation/projects/: 3dGraphicEngine.md  Calculator.md  Chatbot.md  CurrencyConverter_Python.md  DataAnalysisTools.md  DataStreamingPipeline.md  DataVisulisationTool.md  E-commercePlatform.md  FileEncryption.md  InteractiveProductPage.md  InternetSpeedMeter_Python.md  MachineLearningModel_Python.md  MadLibsGenerator_Python.md  NumberGuessingGame.md  PaymentDataAnalysis.md  QR_Codes_Python.md  Qr_Advanced_Python.md  QuizApplication.md  README.md  RayTracer.md  RealTimeDataDashboard.md  Renamer_Python.md  RestfulAPI_Python.md  RockPaperScissors.md  SSC_Python.md  SimpleWebApplication.md  (+7 more)
js/: effects.js  main.js
portfolio/: data.js  index.html  portfolio_data.js
syllabus-tracker/: README.md  package-lock.json  package.json
ttsConverter/: README.md  audiobook_maker.py  requirements.txt
(+85 files in other folders)
